--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Ruby on Rails: Welcome aboard | Home</title>
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+</head>
+<body>
+</body>
+</html>
