--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -110,3 +110,7 @@ background: #ffc;
 border: 1px solid #999;
 margin-bottom: -15px;
 }
+/*wafer-thin*/
+div.field, div.actions {
+margin-bottom: 10px;
+}
