--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -5,7 +5,7 @@ prohibited this <%= @user.class.to_s.underscore.humanize.downcase %>
 from being saved:</h2>
 <p>There were problems with the following fields:</p>
 <ul>
-<% @user.errors.full_messages.each do |msg| %>
+<% object.errors.full_messages.each do |msg| %>
 <li><%= msg %></li>
 <% end %>
 </ul>
