--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -149,3 +149,10 @@ padding: 5px;
 font-size: 12px;
 list-style: square;
 }
+/*users*/
+ul.users {
+margin-top: 1em;
+}
+.users li {
+list-style: none;
+}
